@@ -2,6 +2,8 @@ Version 6.2.4
 - Replaced check for Settings.Logging when logging information in the 
   procedure cache.  This is already in 6.1 and 6.0 but got "misplaced" in 6.2
   (bug #52475)
+- SessionProvider : Avoid SQLNullValueException if lockId returned by select is 
+  NULL (bug#52175)
 
 Version 6.2.3
 - fixed InvalidOperationException when accessing Stream.ReadTimeout or Stream.WriteTimeout on CF
